kubernetes/apps/workers/mail-archive/templates/network_policy.yaml
---
# yaml-language-server: $schema=https://deedee-ops.github.io/schemas/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: mail-archive
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: mail-archive
        app.kubernetes.io/component: imapsync
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: "<path:kubernetes/data/internal/mail-archive#SOURCE_HOST>"
